--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,391 @@
-h1 {
-	color: red;
-	border: 1px solid red;
-}	
-	
+@font-face {
+font-family: OpenSans-Regular;
+src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff);
+font-weight: 400;
+font-style: normal;
+}
+@font-face {
+font-family: OpenSans-Bold;
+src: url(https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff);
+font-weight: 400;
+font-style: normal;
+}
+.header {
+   background-image: url(https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg);
+  background-position: top center;
+  background-color: #000000;
+  width: 100%;
+  height: 450px;
+  position: relative;
+ }
+.header::after {
+  content: ""; 
+  background-color: #000000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.65;
+}
+.logo {
+  width: 245px;
+}
+.header-logo-menu {
+  z-index: 2;
+  padding-top: 30px;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+}
+
+.menu-list {
+  display: flex;
+  list-style-type: none;
+}
+.menu-list-item:nth-child(n+2) {
+  margin-left: 50px;
+}
+.menu-link {
+  font-family: OpenSans-Regular,Arial,sans-serif;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+}
+.menu-link:hover {
+  text-decoration: underline;
+}
+
+.header-title {
+  z-index: 2;
+  width: 800px;
+  font-family: OpenSans-Bold,Arial,sans-serif;
+  font-size: 50px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center; 
+  margin: 90px auto 0px;
+  position: relative;
+  
+}
+.content {
+  width: 1150px;
+  display: flex;
+  justify-content: space-between;
+  margin: 60px auto;
+  
+  }
+.post-list {
+  width: 67%;
+}
+.sidebar {
+  width: 23.5%;
+}
+.last-post:nth-child(n+2) {
+  margin-top: 60px;
+}
+
+.last-post {
+  display: flex;
+}
+.img-last-post {
+ width: 380px;
+ height: auto;
+ margin-right: 30px;
+}
+a {
+  color: #000;
+  text-decoration: none;
+}
+ul {
+    padding-left: 0px;
+    list-style-type: none;
+}
+
+.last-post-tags {
+  margin-bottom: 15px;
+  }
+.last-post-tag {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  display : inline-block;
+  color: #b59f5b;
+}
+.last-post-tag-link {
+  color: #b59f5b;
+}
+.last-post-tag-link:hover {
+  text-decoration: underline;
+}
+
+.last-post-tag:nth-child(n+2) {
+  margin-left: 20px;
+}
+
+.last-post-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #0f0d0e;
+  margin-bottom: 35px;
+  }
+.post-title:hover {
+  color: #b59f5b;
+  }
+
+.last-post-data-autor {
+  display: flex;
+  margin-bottom: 35px;
+  
+}
+.last-post-data {
+  font-family: OpenSans-Regular;
+  font-size: 12px;
+  color: #888888;
+  display : inline-block;
+  margin-right: 15px;
+  }
+.last-post-autor {
+  font-family: OpenSans-Regular;
+  font-size: 12px;
+  color: #000000;
+  font-weight: bold;
+  display : inline-block;
+  }
+
+.last-post-content {
+  font-family: OpenSans-Regular;
+  font-size: 15px;
+  color: #0f0d0e;
+  line-height: 20px;
+}
+.last-post-content1 {
+  margin-top: 20px;
+}
+.latest-posts {
+  margin-bottom: 60px; 
+}
+.latest-post-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #0f0d0e;
+  text-align: center; 
+  margin: 0;
+  
+  }
+.latest-post-title::after {
+      content: '';
+      display: block;
+      width: 65px;
+      border: #b59f5b 2px solid;
+      margin: 10px auto 30px;
+      opacity: 0.4;
+    }
+
+.latest-post {
+  display: flex;
+  margin-bottom: 15px;
+}
+.img-latest-post {
+ width: 70px;
+ height: auto;
+ margin-top: 5px;
+ margin-right: 18px;
+ }
+.latest-post-data {
+  font-family: OpenSans-Regular;
+  font-size: 12px;
+  color: #888888;
+  display : inline-block;
+  }
+.latest-post-content {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #0f0d0e;
+  line-height: 18px;
+  display: block;
+  }
+.latest-post-content:hover {
+  color: #b59f5b;
+  }
+
+.search {
+  display: flex;
+  margin-bottom: 60px;
+}
+.search-group {
+  width: calc(100% - 50px);
+}
+.field {
+  width: 100%;
+  height: 50px;
+  border: none;
+  background-color: #f3f7f6;
+  font-family: OpenSans-Regular;
+  font-size: 13px;
+  padding: 0px 0px 0px 20px;
+}
+
+.field:focus {
+  outline: none;
+  border: #b59f5b 1px solid;
+  box-sizing: border-box; 
+  }
+
+.button {
+  width: 50px; 
+  height: 50px; 
+  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/search.svg");
+  background-repeat: no-repeat; 
+  background-size: 20px; 
+  background-color: #b59f5b; 
+  background-position: center; 
+  border: none;
+}
+.button:hover {
+  background-color: #323232;
+  border: none;
+}
+.visually-hidden {
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute;
+} 
+.email {
+  margin-bottom: 60px;
+}
+.email-field {
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  border: none;
+  background-color: #f3f7f6;
+  font-family: OpenSans-Regular;
+  font-size: 13px;
+  padding: 0px 0px 0px 20px;
+  margin-bottom: 20px;
+}
+.email-field:focus {
+  outline: none;
+  border: #b59f5b 1px solid;
+  box-sizing: border-box;
+  }
+.email-button {
+  width: 100%; 
+  height: 50px;
+  background-color: #b59f5b;
+  border: none;
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #ffffff;
+  text-align: center;
+  
+}
+.email-button:hover {
+  background-color: #323232;
+  border: none;
+}
+.tags {
+ margin-bottom: 60px; 
+}
+.tags-items {
+  display: flex;
+  flex-wrap: wrap;
+}
+.tags-list-link {
+  border: #f4f3f1 2px solid;
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #0f0d0e;
+  padding: 7px 13px;
+  line-height: 38px;  
+  margin-right: 7px;
+}
+.tags-list-link:hover {
+  border: #b59f5b 2px solid;
+}
+.category-items {
+  width: 100%;
+  border-bottom: #eeeeee 1px solid;
+  padding-bottom: 15px;
+  padding-top: 15px;
+}
+.category-list {
+  font-family: OpenSans-Bold;
+  text-transform: capitalize;
+  font-size: 14px;
+  color: #000000;
+}
+.category-list:hover {
+  color: #b59f5b;
+}
+.category-list-number {
+  font-family: OpenSans-Bold;
+  font-size: 12px;
+  color: #b59f5b;
+  vertical-align: 6px;
+}
+footer {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  }
+.social {
+    margin-bottom: 70px;
+}
+.socials-item {
+  display: inline-block;
+  padding-top: 28px;
+  padding-bottom: 28px;
+}
+
+.socials-list {
+    background-color: #ffffff;
+}
+.socials-link {
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: center;
+}
+.socials-item:nth-child(n+2) {
+  margin-left: 25px;
+}
+.socials-link-twitter {
+  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/004-twitter.svg");
+}
+.socials-link-pinterest {
+  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/001-pinterest.svg");
+}
+.socials-link-facebook {
+   background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/002-facebook-logo.svg");
+}
+.socials-link-instagram {
+  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/005-instagram.svg");
+}
+.socials-link-tumblr {
+  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg");
+}
+.copyright {
+  font-family: OpenSans-Bold;
+  font-size: 12px;
+  color: #999999;
+}
+
+
+
+
+
 
 
 
