--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@ src: url("../fonts/OpenSans-Bold.woff");
 font-weight: 400;
 font-style: normal;
 }
+h2, h3, ul, p {
+	margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    padding-inline-start: 0px;
+}
 .header {
   background-image: url("../images/banner-bg.jpg");
   background-size: cover;
@@ -72,27 +79,59 @@ font-style: normal;
  
 }
 .trends {
-display: flex;
-flex: auto;
-justify-content: space-between;
+	margin-top: 60px;
 }
+
+.trend-item {
+  display: flex;
+  justify-content: space-between;
+}	
+
 .trend {
- border: 1px solid red;
  width: 24.7%;
+ position: relative;
+}
+.trend:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(29, 29, 29, 0.45);
 }
 .img-trend {
-	 width: 100%;
+	 max-width: 100%;
 }
 .trend-info {
 	position: absolute;
+	bottom: 15px;
+	right: 20px;
+	left: 20px;
+    border: 2px solid  #b59f5b;
+    padding: 35px 0px 35px 35px;
+    z-index: 2;
+
 }
+.trend-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #ffffff;
+  margin-top: 5px;
+}
+.trend-title:hover {
+  color: #b59f5b;
+  }
+
 .trends-title {
   font-family: OpenSans-Bold;
   text-transform: uppercase;
   font-size: 20px;
   color: #0f0d0e;
   text-align: center; 
-  margin: 60px 0 28px;
+  margin-bottom: 28px;
 }
 .trends-title::after {
       content: '';
@@ -368,15 +407,20 @@ ul {
 .shop {
   width: 1150px;
   display: flex;
-  flex: auto;
   justify-content: space-between;
   margin: auto;
+
 }
 .shop-item {
-border: 1px solid red;
 box-sizing: border-box;
 width: 32%;
-padding: 0 2%;
+    position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 17%;
+
+
 }
 .shop-title {
   font-family: OpenSans-Bold;
@@ -384,7 +428,7 @@ padding: 0 2%;
   font-size: 20px;
   color: #0f0d0e;
   text-align: center; 
-  margin: 60px 0 28px;
+  margin-bottom: 28px;
 }
 .shop-title::after {
       content: '';
@@ -394,7 +438,80 @@ padding: 0 2%;
       margin: 10px auto 30px;
       opacity: 0.4;
     }
-footer {
+
+.img-shop {
+	width: calc(100% - 12%);
+   position: absolute;
+   bottom: calc(100% - 30px);
+}
+.shop-info {
+      border: 2px solid #b59f5b;
+      padding: 16% 6% 0px;
+      z-index: 1;
+  }
+.shop-info-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #0f0d0e;
+}
+.shop-info-content {
+  font-family: OpenSans-Regular;
+  font-size: 15px;
+  color: #0f0d0e;
+  margin-bottom: 30px;
+}
+.shop-info-link {
+  color: #b59f5b;
+}
+.shop-info-link:hover {
+  text-decoration: underline;
+}
+.price {
+	display: block;
+}
+.shop-sale {
+	display: flex;
+	justify-content: space-between;
+}
+.old-price {
+	 font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #0f0d0e;
+  text-decoration: line-through;
+}
+.new-price {
+	 font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #0f0d0e;
+}
+.shop-button {
+  width: 140px; 
+  height: 50px; 
+  background-color: #b59f5b; 
+  background-position: center; 
+  border: none;
+  font-family: OpenSans-Bold;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.shop-button:hover {
+  background-color: #323232;
+  border: none;
+}
+
+
+
+
+
+
+     
+
+ 
+.footer {
   width: 100%;
   margin: auto;
   text-align: center;
@@ -442,6 +559,7 @@ footer {
   font-size: 12px;
   color: #999999;
 }
+
 
 
 
