--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,18 @@ h2, h3, ul, p {
     margin-inline-end: 0;
     padding-inline-start: 0px;
 }
+a {
+  color: #000;
+  text-decoration: none;
+}
+ul {
+    padding-left: 0px;
+    list-style-type: none;
+}
+
+
+@media (min-width: 1201px) {
+
 .header {
   background-image: url("../images/banner-bg.jpg");
   background-size: cover;
@@ -165,14 +177,7 @@ h2, h3, ul, p {
  height: auto;
  margin-right: 30px;
 }
-a {
-  color: #000;
-  text-decoration: none;
-}
-ul {
-    padding-left: 0px;
-    list-style-type: none;
-}
+
 
 .last-post-tags {
   margin-bottom: 15px;
@@ -688,7 +693,638 @@ margin-bottom: 25px;
     border-width: 0px;
 
 }
+}
 
+
+
+@media (max-width: 640px) {
+
+.header {
+  background-image: url("../images/banner-bg.jpg");
+  background-size: cover;
+  background-position: top left 35%;
+  background-color: #000000;
+  width: 100%;
+  height: 640px;
+  position: relative;
+  display: flex;
+  margin-bottom: 40px;
+ }
+.header::after {
+  content: ""; 
+  background-color: #000000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.6;
+}
+.menu {
+  width: 25px;
+  height: 25px;
+  position: absolute;
+  top: 30px;
+  right: 15px;
+  z-index: 2;
+}
+.menu-burger {
+  width: 100%;
+  height: 5px;
+  background-color: #ffffff;
+}
+.menu-burger:after {
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: #ffffff;
+  display: block;
+  position: absolute;
+  bottom: 0;
+}
+.menu-burger:before {
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: #ffffff;
+  display: block;
+  position: absolute;
+  bottom: 10px;
+
+}
+.menu-list {
+  display: none;
+}
+.logo {
+  width: 75%;
+  margin: 0px auto 30px;
+}
+.header-content {
+  z-index: 2;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.header-title {
+  font-family: OpenSans-Bold,Arial,sans-serif;
+  font-size: 26px;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;  
+}
+.trends-title, .popup-title, .latest-post-title, .shop-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #0f0d0e;
+  text-align: center; 
+}
+.trends-title::after, .popup-title::after, .latest-post-title::after, .shop-title::after {
+      content: '';
+      display: block;
+      width: 60px;
+      border: #b59f5b 2px solid;
+      margin: 10px auto 20px;
+      opacity: 0.4;
+    }
+    .trend-item {
+      display: block;
+} 
+
+.trend {
+ width: 100%;
+ position: relative;
+}
+.trend:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: rgba(29, 29, 29, 0.45);
+}
+.img-trend {
+   width: 100%;
+}
+.trend-info {
+  position: absolute;
+  bottom: 15px;
+  right: 20px;
+  left: 20px;
+    border: 2px solid  #b59f5b;
+    padding: 30px 0px 30px 20px;
+    z-index: 2;
+
+}
+.trend-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #ffffff;
+  margin-top: 5px;
+}
+.trend-title:hover {
+  color: #b59f5b;
+  }
+  .last-post-tags {
+  margin: 15px 0px;
+  }
+.last-post-tag {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  display : inline-block;
+  color: #b59f5b;
+}
+.last-post-tag-link {
+  color: #b59f5b;
+}
+.last-post-tag-link:hover {
+  text-decoration: underline;
+}
+
+.last-post-tag:nth-child(n+2) {
+  margin-left: 20px;
+}
+.content {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0px 5%;
+  margin-bottom: 40px;
+  }
+.last-post {
+  margin-bottom: 40px;
+}
+.img-last-post {
+ width: 100%;
+ height: auto;
+}
+.last-post-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 16px;
+  color: #0f0d0e;
+  margin-bottom: 20px;
+  }
+.post-title:hover {
+  color: #b59f5b;
+  }
+
+.last-post-data-autor {
+  display: flex;
+  margin-bottom: 20px;
+  
+}
+.last-post-data {
+  font-family: OpenSans-Regular;
+  font-size: 12px;
+  color: #888888;
+  display : inline-block;
+  margin-right: 15px;
+  }
+.last-post-autor {
+  font-family: OpenSans-Regular;
+  font-size: 12px;
+  color: #000000;
+  font-weight: bold;
+  display : inline-block;
+  }
+
+.last-post-content {
+  font-family: OpenSans-Regular;
+  font-size: 14px;
+  color: #0f0d0e;
+  line-height: 20px;
+}
+.last-post-content1 {
+  margin-top: 10px;
+}
+
+.latest-posts {
+  display: block;
+  margin-bottom: 40px; 
+}
+
+.latest-post {
+  display: flex;
+  margin-bottom: 20px;
+}
+.img-latest-post {
+ width: 20%;
+ height: auto;
+ margin-right: 20px;
+ }
+.latest-post-data {
+  font-family: OpenSans-Regular;
+  font-size: 12px;
+  color: #888888;
+  display : inline-block;
+  }
+.latest-post-content {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #0f0d0e;
+  line-height: 18px;
+  display: block;
+  }
+.latest-post-content:hover {
+  color: #b59f5b;
+  }
+.search {
+  display: flex;
+  margin-bottom: 40px;
+}
+.search-group {
+  width: calc(100% - 50px);
+}
+.field {
+  width: 100%;
+  height: 50px;
+  border: none;
+  background-color: #f3f7f6;
+  font-family: OpenSans-Regular;
+  font-size: 13px;
+  padding: 0px 0px 0px 20px;
+}
+
+.field:focus {
+  outline: none;
+  border: #b59f5b 1px solid;
+  box-sizing: border-box; 
+  }
+
+.button {
+  width: 50px; 
+  height: 50px; 
+  background-image: url("../svg/search.svg");
+  background-repeat: no-repeat; 
+  background-size: 20px; 
+  background-color: #b59f5b; 
+  background-position: center; 
+  border: none;
+}
+.button:hover {
+  background-color: #323232;
+  border: none;
+}
+.visually-hidden {
+  width: 1px;
+  height: 1px;
+  clip: rect(1px, 1px, 1px, 1px);
+  position: absolute;
+} 
+.email {
+  margin-bottom: 40px;
+}
+.email-field {
+  box-sizing: border-box;
+  width: 100%;
+  height: 50px;
+  border: none;
+  background-color: #f3f7f6;
+  font-family: OpenSans-Regular;
+  font-size: 13px;
+  padding: 0px 0px 0px 20px;
+  margin-bottom: 20px;
+}
+.email-field:focus {
+  outline: none;
+  border: #b59f5b 1px solid;
+  box-sizing: border-box;
+  }
+.email-button {
+  width: 100%; 
+  height: 50px;
+  background-color: #b59f5b;
+  border: none;
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #ffffff;
+  text-align: center;
+  
+}
+.email-button:hover {
+  background-color: #323232;
+  border: none;
+}
+.tags {
+ margin-bottom: 40px; 
+}
+.tags-items {
+  display: flex;
+  flex-wrap: wrap;
+}
+.tags-list-link {
+  border: #f4f3f1 2px solid;
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 12px;
+  color: #0f0d0e;
+  padding: 7px 10px;
+  line-height: 38px;  
+  margin-right: 5px;
+}
+.tags-list-link:hover {
+  border: #b59f5b 2px solid;
+}
+.category-items {
+  width: 100%;
+  border-bottom: #eeeeee 1px solid;
+  padding-bottom: 12px;
+  padding-top: 12px;
+}
+.category-list {
+  font-family: OpenSans-Bold;
+  text-transform: capitalize;
+  font-size: 14px;
+  color: #000000;
+}
+.category-list:hover {
+  color: #b59f5b;
+}
+.category-list-number {
+  font-family: OpenSans-Bold;
+  font-size: 12px;
+  color: #b59f5b;
+  vertical-align: 6px;
+}
+.shop {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0px 5%;
+  display: block;
+  margin-bottom: 40px;
+
+}
+.shop-item {
+box-sizing: border-box;
+width: 100%;
+    position: relative;
+  display: flex;
+  margin-top: 60%;
+
+}
+.img-shop {
+  width: 88%;
+   position: absolute;
+   bottom: calc(100% - 30px);
+   left: 6%;
+}
+.shop-info {
+      border: 2px solid #b59f5b;
+      padding: 16% 6% 8%;
+      z-index: 1;
+  }
+.shop-info-title {
+  font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 17px;
+  color: #0f0d0e;
+}
+.shop-info-content {
+  font-family: OpenSans-Regular;
+  font-size: 15px;
+  color: #0f0d0e;
+  margin-bottom: 30px;
+}
+.shop-info-link {
+  color: #b59f5b;
+}
+.shop-info-link:hover {
+  text-decoration: underline;
+}
+.price {
+  display: flex;
+  flex-direction: column;
+}
+.shop-sale {
+  display: flex;
+  justify-content: space-between;
+}
+.old-price {
+   font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #0f0d0e;
+  text-decoration: line-through;
+  position: relative;
+  width: max-content;
+}
+.old-price::after {
+      content: '';
+      width: 2px;
+      border: #0f0d0e 0.5px solid;
+      position: absolute;
+      top: 12px;
+      right: 3px;
+    }
+
+.new-price {
+   font-family: OpenSans-Bold;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #0f0d0e;
+  position: relative;
+}
+.new-price::after {
+      content: '';
+      width: 2px;
+      border: #0f0d0e 1px solid;
+      position: absolute;
+      top: 17px;
+      right: 5px;
+    }
+
+
+.shop-button {
+  width: 140px; 
+  height: 50px; 
+  background-color: #b59f5b; 
+  background-position: center; 
+  border: none;
+  font-family: OpenSans-Bold;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.shop-button:hover {
+  background-color: #323232;
+  border: none;
+}
+footer {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+  }
+.social {
+    margin-bottom: 70px;
+}
+.socials-item {
+  display: inline-block;
+  padding-top: 28px;
+  padding-bottom: 28px;
+}
+
+.socials-list {
+    background-color: #ffffff;
+}
+.socials-link {
+  display: block;
+  width: 24px;
+  height: 24px;
+  background-repeat: no-repeat;
+  background-size: 20px;
+  background-position: center;
+}
+.socials-item:nth-child(n+2) {
+  margin-left: 25px;
+}
+.socials-link-twitter {
+  background-image: url("../svg/004-twitter.svg");
+}
+.socials-link-pinterest {
+  background-image: url("../svg/001-pinterest.svg");
+}
+.socials-link-facebook {
+   background-image: url("../svg/002-facebook-logo.svg");
+}
+.socials-link-instagram {
+  background-image: url("../svg/005-instagram.svg");
+}
+.socials-link-tumblr {
+  background-image: url("../svg/003-tumblr.svg");
+}
+.copyright {
+  font-family: OpenSans-Bold;
+  font-size: 12px;
+  color: #999999;
+    margin-bottom: 40px;
+}
+.popup {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    visibility: hidden;
+}
+.popup-container {
+    width: 90%;
+    box-sizing: border-box;
+    margin: auto;
+    background-color: #ffffff;
+    padding: 50px 30px;
+    position: relative;
+    align-items: center;
+    margin-top: 55px;     
+}
+.select-label, .newsletter-title, .field-label {
+display: block;
+margin-bottom: 10px;
+}
+.select-label, .select, .newsletter-title, .radio-group-text, .field-label {
+font-family: OpenSans-Regular;
+  font-size: 13px;
+  color: #000000;
+}
+.select {
+  width: 100%;
+  border: none;
+  height: 50px;
+  padding-left: 20px;
+-webkit-appearance:none;
+-moz-appearance:none;
+background-image: url("../svg/form-arrows.svg");
+background-repeat: no-repeat;
+background-position: right 20px center;
+background-size: 7.5px;
+margin-bottom: 25px;
+}
+
+.select:focus {
+  border: 1px solid #b59f5b;
+      outline: none;
+}
+.radio-group-text::before {
+  content:"";
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  background-image: url("../svg/form-empty-circle.svg");
+    background-repeat: no-repeat; 
+    background-position: center center;
+    background-size: 15px;
+    vertical-align:middle;
+    margin-right: 5px;
+  }
+  .radio:checked ~ .radio-group-text::before {
+    background-image: url("../svg/form-circle.svg");
+  }
+  .radio {
+    position: absolute;
+    clip: rect(1px,1px,1px,1px);
+    height: 1px;
+    width: 1px;
+  }
+  .radio-group:nth-of-type(n+2) {
+    margin-left: 10px;
+  }
+  .newsletter {
+    margin-bottom: 25px;
+  }
+  .field-textarea {
+    width:100%;
+    max-width: 100%;
+    height: 130px;
+    padding: 20px;
+    box-sizing: border-box;
+    border: none;
+    margin-bottom: 25px;
+  }
+    .field-textarea:focus {
+  border: 1px solid #b59f5b;
+      outline: none;
+  }
+.popup-button {
+  width: 100%; 
+  height: 50px; 
+  background-color: #b59f5b; 
+  background-position: center; 
+  border: none;
+   font-family: OpenSans-Bold;
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #000000;
+}
+.popup-button:hover {
+  background-color: #323232;
+  border: none;
+  color: #ffffff;
+}
+.popup__close {
+  width: 20px;
+  height: 20px;
+  background-image: url("../svg/form-x.svg");
+  background-color: transparent;
+    background-repeat: no-repeat; 
+    background-position: center center;
+    background-size: 20px;
+    position: absolute;
+    right: 0px;
+    top: -25px;
+    padding: 0px 0px;
+    border-width: 0px;
+
+}
+}
 
 
 
