--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,9 @@ ul {
     list-style-type: none;
 }
 
+body {
+  margin: 0;
+}
 
 @media (min-width: 1201px) {
 
@@ -100,8 +103,9 @@ ul {
 }	
 
 .trend {
- width: 24.7%;
+ width: calc(25% - 2.5px);
  position: relative;
+ font-size: 0;
 }
 .trend:after {
     content: "";
@@ -115,6 +119,8 @@ ul {
 }
 .img-trend {
 	 width: 100%;
+   max-height: 315px;
+   object-fit: cover;
 }
 .trend-info {
 	position: absolute;
@@ -122,7 +128,7 @@ ul {
 	right: 20px;
 	left: 20px;
     border: 2px solid  #b59f5b;
-    padding: 35px 0px 35px 35px;
+    padding: 35px 35px 35px 35px;
     z-index: 2;
 
 }
@@ -479,7 +485,7 @@ width: 32%;
 	justify-content: space-between;
 }
 .old-price {
-	 font-family: OpenSans-Bold;
+	 font-family: OpenSans-Bold, sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   color: #0f0d0e;
@@ -487,37 +493,24 @@ width: 32%;
   position: relative;
   width: max-content;
 }
-.old-price::after {
-      content: '';
-      width: 2px;
-      border: #0f0d0e 0.5px solid;
-      position: absolute;
-      top: 12px;
-      right: 3px;
-    }
+
 
 .new-price {
-	 font-family: OpenSans-Bold;
+	 font-family: OpenSans-Bold, sans-serif;
   text-transform: uppercase;
   font-size: 20px;
   color: #0f0d0e;
   position: relative;
 }
-.new-price::after {
-      content: '';
-      width: 2px;
-      border: #0f0d0e 1px solid;
-      position: absolute;
-      top: 17px;
-      right: 5px;
-    }
 
 
 .shop-button {
   width: 140px; 
   height: 50px; 
   background-color: #b59f5b; 
-  background-position: center; 
+  text-align: center;
+  padding-top: 15px;
+  box-sizing: border-box;
   border: none;
   font-family: OpenSans-Bold;
   font-size: 14px;
@@ -543,7 +536,7 @@ footer {
 }
 
 .socials-list {
-    background-color: #ffffff;
+    background-color: #f4f7f6;
 }
 .socials-link {
   display: block;
@@ -588,7 +581,7 @@ footer {
     visibility: hidden;
 }
 .popup-container {
-    width: 23.5%;
+    width: 390px;
     margin: auto;
     background-color: #ffffff;
     padding: 50px 30px;
@@ -616,6 +609,7 @@ background-repeat: no-repeat;
 background-position: right 20px center;
 background-size: 7.5px;
 margin-bottom: 25px;
+background-color: #f4f7f6;
 }
 
 .select:focus {
@@ -652,16 +646,23 @@ margin-bottom: 25px;
 	.field-textarea {
 		width:100%;
 		max-width: 100%;
+    min-width: 100%;
+    min-height: 70px;
+    max-height: 150px;
 		height: 130px;
 		padding: 20px;
 		box-sizing: border-box;
 		border: none;
 		margin-bottom: 25px;
+    background-color: #f4f7f6;
+  font-family: OpenSans-Regular;
+  font-size: 13px;
 	}
     .field-textarea:focus {
 	border: 1px solid #b59f5b;
 	    outline: none;
-	}
+ }
+
 .popup-button {
   width: 100%; 
   height: 50px; 
@@ -671,7 +672,7 @@ margin-bottom: 25px;
    font-family: OpenSans-Bold;
   font-size: 14px;
   text-transform: uppercase;
-  color: #000000;
+  color: #ffffff;
 }
 .popup-button:hover {
   background-color: #323232;
@@ -801,9 +802,10 @@ margin-bottom: 25px;
 }
 
 .trend {
-   width: 49.5%;
-   margin-bottom: 0.5%;
+   width: calc(50% - 2.5px);
+   margin-bottom: 5px;
    position: relative;
+   font-size: 0;
   }
 
 
@@ -819,6 +821,8 @@ margin-bottom: 25px;
 }
 .img-trend {
    width: 100%;
+   max-height: 250px;
+   object-fit: cover;
 }
 .trend-info {
   position: absolute;
@@ -826,7 +830,7 @@ margin-bottom: 25px;
   right: 20px;
   left: 20px;
     border: 2px solid  #b59f5b;
-    padding: 30px 0px 30px 20px;
+    padding: 30px 30px 30px 20px;
     z-index: 2;
 
 }
@@ -1190,7 +1194,7 @@ width: 49%;
   justify-content: space-between;
 }
 .old-price {
-   font-family: OpenSans-Bold;
+   font-family: OpenSans-Bold, sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   color: #0f0d0e;
@@ -1198,37 +1202,24 @@ width: 49%;
   position: relative;
   width: max-content;
 }
-.old-price::after {
-      content: '';
-      width: 2px;
-      border: #0f0d0e 0.5px solid;
-      position: absolute;
-      top: 12px;
-      right: 3px;
-    }
+
 
 .new-price {
-   font-family: OpenSans-Bold;
+   font-family: OpenSans-Bold, sans-serif;
   text-transform: uppercase;
   font-size: 20px;
   color: #0f0d0e;
   position: relative;
 }
-.new-price::after {
-      content: '';
-      width: 2px;
-      border: #0f0d0e 1px solid;
-      position: absolute;
-      top: 17px;
-      right: 5px;
-    }
 
 
 .shop-button {
   width: 140px; 
   height: 50px; 
   background-color: #b59f5b; 
-  background-position: center; 
+  text-align: center;
+  padding-top: 15px;
+  box-sizing: border-box;
   border: none;
   font-family: OpenSans-Bold;
   font-size: 14px;
@@ -1247,6 +1238,7 @@ footer {
   }
 .social {
     margin-bottom: 70px;
+
 }
 .socials-item {
   display: inline-block;
@@ -1255,7 +1247,7 @@ footer {
 }
 
 .socials-list {
-    background-color: #ffffff;
+    background-color: #f4f7f6;
 }
 .socials-link {
   display: block;
@@ -1301,7 +1293,7 @@ footer {
     visibility: hidden;
 }
 .popup-container {
-    width: 50%;
+    width: 390px;
     box-sizing: border-box;
     margin: auto;
     background-color: #ffffff;
@@ -1331,6 +1323,7 @@ background-repeat: no-repeat;
 background-position: right 20px center;
 background-size: 7.5px;
 margin-bottom: 25px;
+background-color: #f4f7f6;
 }
 
 .select:focus {
@@ -1364,15 +1357,22 @@ margin-bottom: 25px;
   .newsletter {
     margin-bottom: 25px;
   }
-  .field-textarea {
+ .field-textarea {
     width:100%;
     max-width: 100%;
+    min-width: 100%;
+    min-height: 70px;
+    max-height: 150px;
     height: 130px;
     padding: 20px;
     box-sizing: border-box;
     border: none;
     margin-bottom: 25px;
+    background-color: #f4f7f6;
+  font-family: OpenSans-Regular;
+  font-size: 13px;
   }
+
     .field-textarea:focus {
   border: 1px solid #b59f5b;
       outline: none;
@@ -1386,7 +1386,7 @@ margin-bottom: 25px;
    font-family: OpenSans-Bold;
   font-size: 14px;
   text-transform: uppercase;
-  color: #000000;
+  color: #ffffff;
 }
 .popup-button:hover {
   background-color: #323232;
@@ -1512,7 +1512,8 @@ margin-bottom: 25px;
 .trend {
  width: 100%;
  position: relative;
- margin-bottom: 0.5%;
+ margin-bottom: 3px;
+ font-size: 0;
 }
 
 
@@ -1528,6 +1529,8 @@ margin-bottom: 25px;
 }
 .img-trend {
    width: 100%;
+   max-height: 230px;
+   object-fit: cover;
 }
 .trend-info {
   position: absolute;
@@ -1535,7 +1538,7 @@ margin-bottom: 25px;
   right: 20px;
   left: 20px;
     border: 2px solid  #b59f5b;
-    padding: 30px 0px 30px 20px;
+    padding: 30px 30px 30px 20px;
     z-index: 2;
 
 }
@@ -1827,7 +1830,7 @@ width: 100%;
   justify-content: space-between;
 }
 .old-price {
-   font-family: OpenSans-Bold;
+   font-family: OpenSans-Bold, sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   color: #0f0d0e;
@@ -1835,37 +1838,23 @@ width: 100%;
   position: relative;
   width: max-content;
 }
-.old-price::after {
-      content: '';
-      width: 2px;
-      border: #0f0d0e 0.5px solid;
-      position: absolute;
-      top: 12px;
-      right: 3px;
-    }
 
 .new-price {
-   font-family: OpenSans-Bold;
+   font-family: OpenSans-Bold, sans-serif;
   text-transform: uppercase;
   font-size: 20px;
   color: #0f0d0e;
   position: relative;
 }
-.new-price::after {
-      content: '';
-      width: 2px;
-      border: #0f0d0e 1px solid;
-      position: absolute;
-      top: 17px;
-      right: 5px;
-    }
 
 
 .shop-button {
   width: 140px; 
   height: 50px; 
   background-color: #b59f5b; 
-  background-position: center; 
+  text-align: center;
+  padding-top: 15px;
+  box-sizing: border-box; 
   border: none;
   font-family: OpenSans-Bold;
   font-size: 14px;
@@ -1891,7 +1880,7 @@ footer {
 }
 
 .socials-list {
-    background-color: #ffffff;
+    background-color: #f4f7f6;
 }
 .socials-link {
   display: block;
@@ -1937,7 +1926,7 @@ footer {
     visibility: hidden;
 }
 .popup-container {
-    width: 90%;
+    width: 330px;
     box-sizing: border-box;
     margin: auto;
     background-color: #ffffff;
@@ -1967,6 +1956,7 @@ background-repeat: no-repeat;
 background-position: right 20px center;
 background-size: 7.5px;
 margin-bottom: 25px;
+background-color: #f4f7f6;
 }
 
 .select:focus {
@@ -2000,15 +1990,25 @@ margin-bottom: 25px;
   .newsletter {
     margin-bottom: 25px;
   }
-  .field-textarea {
-    width:100%;
+ .field-textarea {
+    width: 100%;
     max-width: 100%;
+    min-width: 100%;
+    min-height: 70px;
+    max-height: 150px;
     height: 130px;
     padding: 20px;
     box-sizing: border-box;
     border: none;
     margin-bottom: 25px;
+    background-color: #f4f7f6;
+  font-family: OpenSans-Regular;
+  font-size: 13px;
   }
+    .field-textarea:focus {
+  border: 1px solid #b59f5b;
+      outline: none;
+ }
     .field-textarea:focus {
   border: 1px solid #b59f5b;
       outline: none;
@@ -2022,7 +2022,7 @@ margin-bottom: 25px;
    font-family: OpenSans-Bold;
   font-size: 14px;
   text-transform: uppercase;
-  color: #000000;
+  color: #ffffff;
 }
 .popup-button:hover {
   background-color: #323232;
