--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,8 @@ font-weight: 400;
 font-style: normal;
 }
 h1, h2, h3, ul, p {
-	margin-block-start: 0;
-    margin-block-end: 0;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-    padding-inline-start: 0px;
+	 margin: 0;
+   padding: 0px;
 }
 a {
   color: #000;
@@ -1145,6 +1142,7 @@ background-color: #f4f7f6;
   margin: auto;
   margin-bottom: 50px;
 box-sizing: border-box;
+padding: 0px 15px;
 }
 .shop-item {
 box-sizing: border-box;
@@ -1333,8 +1331,8 @@ background-color: #f4f7f6;
 .radio-group-text::before {
   content:"";
   display: inline-block;
-  width: 15px;
-  height: 15px;
+  width: 25px;
+  height: 25px;
   background-image: url("../svg/form-empty-circle.svg");
     background-repeat: no-repeat; 
     background-position: center center;
@@ -1394,8 +1392,8 @@ background-color: #f4f7f6;
   color: #ffffff;
 }
 .popup__close {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   background-image: url("../svg/form-x.svg");
   background-color: transparent;
     background-repeat: no-repeat; 
@@ -1503,14 +1501,29 @@ background-color: #f4f7f6;
       margin: 10px auto 20px;
       opacity: 0.4;
     }
-
+@media (max-height: 641px) and (orientation: landscape) {
+  
+  .trend-item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .trend {
+    width: calc(50% - 2.5px);
+  }
+}
+@media (orientation: portrait) {
+  
 .trend-item {
       display: block;
   }
 
-
 .trend {
  width: 100%;
+}
+}
+
+.trend {
  position: relative;
  margin-bottom: 3px;
  font-size: 0;
@@ -1966,8 +1979,8 @@ background-color: #f4f7f6;
 .radio-group-text::before {
   content:"";
   display: inline-block;
-  width: 15px;
-  height: 15px;
+  width: 25px;
+  height: 25px;
   background-image: url("../svg/form-empty-circle.svg");
     background-repeat: no-repeat; 
     background-position: center center;
@@ -2030,8 +2043,8 @@ background-color: #f4f7f6;
   color: #ffffff;
 }
 .popup__close {
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   background-image: url("../svg/form-x.svg");
   background-color: transparent;
     background-repeat: no-repeat; 
